# thesis

./: .gitignore  README.md  condaenv.yml  main.py  pyproject.toml  requirements.in  requirements.txt
configs/: base_rolling_train_test.yaml  base_tuning_preload_single_reward.yaml  base_tuning_preload_single_reward_as_input.yaml  clone_config.yaml  clone_config_multiple.yaml  hydra.yaml  pnl_override.yaml  rolling_train_test.yaml  short_run_override.yaml  test_config.yaml  test_tuning.yaml  test_tuning_2.yaml  test_yaml.yaml  tuning_preload_repeat.yaml  tuning_preload_single_reward_base.yaml  tuning_test_objective_preload_repeat.yaml  tuning_train_eval_multi_run.yaml  tuning_train_eval_multi_run_reward_params.yaml  tuning_train_eval_multi_run_rewards.yaml  tuning_train_eval_multi_run_rewards_test.yaml  tuning_train_eval_single_run.yaml
csv_parser/: Cargo.toml  indicator_parsing.py  old.rs  parse.env
csv_parser/AS/: estimators.py  intensity.py  parse_as.py  volatility.py
csv_parser/src/: main.rs
csv_parser/src/file_util/: mod.rs
csv_parser/src/orderbook_util/: mod.rs
csv_parser/src/parse_util/: mod.rs
old/: as_agent.py  main.py  mm_env copy.py  mm_env.py  mm_env_old.py  policies.py
src/: cloning.py  model_testing.py  simulations.py  testing.py  training.py  tuning.py  tuning_func.py  tuning_test.py  util.py
src/environments/: util.py  (+5 more)
tests/: test_as.py  test_as_expert.py  test_callbacks.py  test_curve_fit.py  test_env.py  test_mm_env.py  test_model_actions.py  test_rewards.py  test_spaces.py  test_state_manager.py  test_util.py
thesis/: references.bib
(+41 files in other folders)
